--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
     "paper-button": "PolymerElements/paper-button#^1.0.14",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4"
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4",
+    "iron-icons": "PolymerElements/iron-icons#^1.2.0",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.1.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
